# MCDSM

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
api/: .gitignore  example.env  pyproject.toml
api/app/: __init__.py  manager.py
api/app/models/: __init__.py  base.py  networks.py  resources.py
api/app/models/network/: network_config.py  network_manager.py  network_model.py
api/app/models/resource/: collection.py  resource.py
api/app/models/server/: console_broker.py  server_config.py  server_manager.py  server_model.py
api/app/templates/pages/: server.html
api/mcdsm/: manager.py
api/mcdsm/static/css/pages/: server.css
api/mcdsm/static/js/pages/: server.js
api/mcdsm/templates/: home.html
mcdsm/: __init__.py  manager.py
mcdsm/models/: networks.py
mcdsm/static/css/pages/: server.css
mcdsm/static/js/pages/: server.js
mcdsm/templates/: home.html
mcdsm/templates/pages/: server.html
webui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
webui/src/: App.css  App.tsx  AppRouter.tsx  index.css  main.tsx  theme.css  types.tsx  utils.tsx
webui/src/components/: AppSidebar.css  AppSidebar.tsx
webui/src/components/app-sidebar/: AppSidebar.css  AppSidebar.tsx
webui/src/components/breadcrumbs/: Breadcrumbs.css  Breadcrumbs.tsx
webui/src/components/list-group/: ListGroup.css  ListGroup.tsx
webui/src/components/loading-dots/: LoadingDots.tsx
webui/src/components/network-list/: NetworkList.tsx
webui/src/components/section-heading/: SectionHeader.tsx
(+22 files in other folders)
